# OpenCVAndAI

./: .gitignore  README.md  requirements.txt
lab01_lungs/: .gitignore  Project1.ipynb
lab02_slicer_plugin/: CMakeLists.txt
lab02_slicer_plugin/Lungs_script/: CMakeLists.txt  Lungs_script.py  algorithm.py
lab02_slicer_plugin/Lungs_script/Resources/UI/: Lungs_script.ui
lab03_autoencoder/: Autoencoder.ipynb
lab03_vae/: Autoencoder.ipynb
lab03_vae/results/: autoencoder_2024-11-11_0.9744071350097656.pt  autoencoder_2024-11-24_0.9865083312988282.pt  autoencoder_2024-11-25_0.9894749908447266.pt
lab04_abdomen/: README.md  abdomen.ipynb
lab04_abdomen/data/: oznaczenia.txt
lab04_abdomen/data/test/: ranges.txt
